--- a/i18n/default.json
+++ b/i18n/default.json
@@ -24,7 +24,7 @@
   "coreFemaleReferences": "The farmer is female and the dialogue may reflect this, for example by referring to her as a 'woman', 'girl' or 'wife' as appropriate in the Context, referring to typical female clothing choices or activities.",
   "preoccupation": "Before the farmer arrived, {{Name}} was thinking about {{preoccupation}}. {{Name}} may talk about this, if there is nothing more pressing to discuss.",
   "openNpcsHeading": "Other NPCs:",
-  "otherNpcsIntro": "As well as the farmer and {N{{Name}}the following villagers are present:",
+  "otherNpcsIntro": "As well as the farmer and {{Name}} the following villagers are present:",
   "otherNpcsOutro": "The dialogue should account for the presence of these other villagers, and may reference them or be addressed to them as well as to the farmer.",
   "currentConversationHeading": "Current Conversation:",
   "currentConversationIntro": "The farmer and {{Name}} are in the middle of a conversation. The dialogue should be a continuation of the conversation, and should build on the previous lines without repetition. The previous lines were:",
@@ -64,7 +64,8 @@
   "spouseActionPatio": "{{Name}} is standing on the patio to the rear of the farmhouse.  {{Name}} is engaging in their favourite hobby, and focussing intently.",
   "spouseActionFunReturn": "{{Name}} is returning to the farmhouse after a fun day out.",
   "spouseActionJobReturn": "{{Name}} is returning to the farmhouse after a day at work.",
-  "spouseActionSpouseRoom": "{{Name}} is engaging in {{GenderPossessive}} personal hobbies and interests in a special room in the farmhouse dedicates to that.",
+  "spouseActionSpouseRoom": "{{Name}} is engaging in his personal hobbies and interests in a special room in the farmhouse dedicates to that.",
+  "spouseActionSpouseRoom.npcFemale": "{{Name}} is engaging in her personal hobbies and interests in a special room in the farmhouse dedicates to that.",
   "giftIntro": "The farmer has given {{Name}} a {{giftName}} as an unexpected gift.",
   "giftLoved": "This gift is one of {{Name}}'s favourite things in the world.",
   "giftLiked": "This gift is something that {{Name}} likes.",
@@ -112,7 +113,8 @@
   "recentEventsGreenRain": "The green rain has stopped and the townsfolk are returning to their normal routines.",
   "locationAtHome": "The farmer and {{Name}} are talking in {{Name}}'s home{{inShopString}}.",
   "locationAtHomeOrShop": " or the shop",
-  "locationBed": "{{Name}} is in bed. The farmer has climbed into {{Name}}'s bed, and is talking to {{GenderPronoun}} there.",
+  "locationBed": "{{Name}} is in bed. The farmer has climbed into {{Name}}'s bed, and is talking to him there.",
+  "locationBed.npcFemale": "{{Name}} is in bed. The farmer has climbed into {{Name}}'s bed, and is talking to her there.",
   "locationTown": "The farmer and {{Name}} are talking outdoors in the center of Pelican Town.",
   "locationBeach": "The farmer and {{Name}} are on the beach.",
   "locationDesert": "The farmer and {{Name}} are away from Stardew Valley visiting the Calico desert.",
@@ -131,6 +133,7 @@
   "locationResortShore": "The farmer and {{Name}} are at the Ginger Island tropical resort. They are talking at the shore of the beach, with their feet in the water looking out to sea.",
   "locationResortWander": "The farmer and {{Name}} are at the Ginger Island tropical resort. {{Name}} is walking around behind the beach huts, close to the jungle and considering exploring the island away from the resort.",
   "locationResort": "The farmer and {{Name}} are at the Ginger Island tropical resort. The dialogue should be appropriate wherever in the resort they are.",
+  "locationGeneric": "The farmer and {{Name}} are at {{Location}}.",
   "locationOutro": "The location where the conversation is taking place may be significant for the lines.",
   "locationTravelling": "{{Name}} is going to {{destination}}.",
   "generalBeingRoommates": "being roommates",
@@ -154,7 +157,8 @@
   "childrenNone": "The farmer and {{Name}} have no children.",
   "childrenMultiple": "The farmer and {{Name}} have {{count}} children.",
   "childrenSingle": "The farmer and {{Name}} have one child.",
-  "childrenDescription": "A {{Gender}} named {{Name}} who is {{Age}} years old.",
+  "childrenDescriptionBoy": "A boy named {{Name}} who is {{Age}} years old.",
+  "childrenDescriptionGirl": "A girl named {{Name}} who is {{Age}} years old.",
   "childrenPregnant": "The farmer and {{Name}} are expecting a child in {{daysUntilBirth}} days.",
   "generalBoy": "boy",
   "generalGirl": "girl",
@@ -219,5 +223,15 @@
   "generalMidday": "midday",
   "generalAfternoon": "afternoon",
   "generalEvening": "evening",
-  "generalLateNight": "late at night"
+  "generalLateNight": "late at night",
+  "timeInTheFuture": "in the future",
+  "timeJustNow": "just now",
+  "timeInTheLastHour": "in the last hour",
+  "timeEarlierToday": "earlier today",
+  "timeYesterday": "yesterday",
+  "timeDaysAgo": "{{days}} days ago",
+  "timeDaysAgoSeasonDay": "{{days}} days ago on day {{day}} of {{season}}",
+  "timeEarlierThisYear": "earlier this year on day {{day}} of {{season}}",
+  "timeLastYear": "last year on day {{day}} of {{season}}",
+  "timeALongTimeAgo": "a long time ago on day {{day}} of {{season}} in year {{year}}"
 }
