Added wealth and farm locations

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -131,6 +131,8 @@
   "locationResortShore": "The farmer and {{Name}} are at the Ginger Island tropical resort. They are talking at the shore of the beach, with their feet in the water looking out to sea.",
   "locationResortWander": "The farmer and {{Name}} are at the Ginger Island tropical resort. {{Name}} is walking around behind the beach huts, close to the jungle and considering exploring the island away from the resort.",
   "locationResort": "The farmer and {{Name}} are at the Ginger Island tropical resort. The dialogue should be appropriate wherever in the resort they are.",
+  "locationFarmHouse": "The farmer and {{Name}} are inside the farmhouse.",
+  "locationFarm": "The farmer and {{Name}} are outside on the farm.",
   "locationGeneric": "The farmer and {{Name}} are at {{Location}}.",
   "locationOutro": "The location where the conversation is taking place may be significant for the lines.",
   "locationTravelling": "{{Name}} is going to {{destination}}.",
@@ -152,6 +154,10 @@
   "farmBuildingsRepairedGreenhouse": "A repaired greenhouse.",
   "farmBuildingsConstruction": "A {{buildingType}} which will complete construction in {{daysOfConstructionLeft}} days.",
   "farmBuildingsNone": "The farm has no buildings apart from the farmhouse and shipping bin.",
+  "wealthPoor": "The farmer and {{Name}} are currently poor, with just {{wealth}} gold.",
+  "wealthMiddle": "The farmer and {{Name}} are doing okay financially, with {{wealth}} gold.",
+  "wealthRich": "The farmer and {{Name}} are doing well financially, with {{wealth}} gold.",
+  "wealthVeryRich": "The farmer and {{Name}} are very wealthy, with {{wealth}} gold.",
   "childrenNone": "The farmer and {{Name}} have no children.",
   "childrenMultiple": "The farmer and {{Name}} have {{count}} children.",
   "childrenSingle": "The farmer and {{Name}} have one child.",
