Added i18n for confirm

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -238,5 +238,43 @@
   "timeDaysAgoSeasonDay": "{{days}} days ago on day {{day}} of {{season}}",
   "timeEarlierThisYear": "earlier this year on day {{day}} of {{season}}",
   "timeLastYear": "last year on day {{day}} of {{season}}",
-  "timeALongTimeAgo": "a long time ago on day {{day}} of {{season}} in year {{year}}"
+  "timeALongTimeAgo": "a long time ago on day {{day}} of {{season}} in year {{year}}",
+  "configAlways": "Always",
+  "configMostly": "Mostly",
+  "configOccasionally": "Occasionally",
+  "configRarely": "Rarely",
+  "configNever": "Never",
+  "configGmcmNotInstalled": "Generic Mod Config Menu is not installed. Skipping config menu registration.",
+  "configEnable": "Enable Mod",
+  "configEnableTooltip": "Enable or disable the mod.",
+  "configLogging": "Enable Logging",
+  "configLoggingTooltip": "Enable or disable logging of prompts and responses.",
+  "configProvider": "AI Model Provider",
+  "configApiKey": "API Key",
+  "configApiKeyTooltip": "API Key for the AI model provider.",
+  "configModelName": "Model Name",
+  "configModelNameTooltip": "Name of the AI model to use.",
+  "configServerAddress": "Server Address",
+  "configServerAddressTooltip": "URL of the server for local and Open AI compatible models.",
+  "configPromptFormat": "Prompt Format",
+  "configPromptFormatTooltip": "Format of the prompt to send to the AI model.",
+  "configTranslation": "Translate outputs",
+  "configTranslationTooltip": "Translate the AI model outputs to the game language (without i18n pack).",
+  "configFrequencyGeneral": "Frequency of general lines",
+  "configFrequencyGeneralTooltip": "How often should the mod generate general lines.",
+  "configFrequencyMarriage": "Frequency of marriage lines",
+  "configFrequencyMarriageTooltip": "How often should the mod generate marriage lines.",
+  "configFrequencyGifts": "Frequency of gift lines",
+  "configFrequencyGiftsTooltip": "How often should the mod generate gift lines.",
+  "configDiableForCharacters": "Disable for characters",
+  "configDiableForCharactersTooltip": "Comma-separated list of villagers to disable the mod for, e.g. (\"Abigail,Leah,Sam\")",
+  "configNoModels": "Unable to get model names for {{Provider}} (maybe the API key wasn't set when this menu was opened?)",
+  "configModels": "The models available on provider {{Provider}} are:\n{{models}}",
+  "modelCheckApiKey": "API key is not provided. Please check the configuration.",
+  "modelCheckModelName": "Model name is not provided. Usually this is requires, please check the configuration.",
+  "modelCheckCantGenerate": "Can retreive model names but not generate dialogue. Check the model name is correctly configured.",
+  "modelCheckInsecure": "The server address specified does not use a secure connection (https). This can block text generation.",
+  "modelCheckGetNames": "Unable to get model names or generate dialogue.  Please check the API Key is correctly entered.",
+  "modelCheckGenericError": "Please check the server address and details.",
+  "modelCheckSuccess": "Connected to the model successfully."
 }
