Bug fixes on translation of config options

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -264,8 +264,8 @@
   "configFrequencyGeneralTooltip": "How often should the mod generate general lines.",
   "configFrequencyMarriage": "Frequency of marriage lines",
   "configFrequencyMarriageTooltip": "How often should the mod generate marriage lines.",
-  "configFrequencyGifts": "Frequency of gift lines",
-  "configFrequencyGiftsTooltip": "How often should the mod generate gift lines.",
+  "configFrequencyGift": "Frequency of gift lines",
+  "configFrequencyGiftTooltip": "How often should the mod generate gift lines.",
   "configDiableForCharacters": "Disable for characters",
   "configDiableForCharactersTooltip": "Comma-separated list of villagers to disable the mod for, e.g. (\"Abigail,Leah,Sam\")",
   "configNoModels": "Unable to get model names for {{Provider}} (maybe the API key wasn't set when this menu was opened?)",
