--- a/i18n/default.json
+++ b/i18n/default.json
@@ -18,8 +18,8 @@
   "coreInstructionHeading": "Instructions:",
   "coreContextHeading": "Context:",
   "coreFarmerGender": "The farmer is ${male^female}$. As well as running the farm, ${he^she}$ is an adventurer and also has interests and habits that are typically ${male^female}$.",
-  "coreRoommates": "The farmer and {{Name}} are roommates and close, non-romantic friends. They live together at the farm inherited from the farmer's grandfather. {{Name}} lived in the sewers before meeting the farmer and moved from there to the farm when they became roommates.",
-  "coreMarried": "The farmer is married to {{Name}}. They live together at the farm inherited from the farmer's grandfather.  {{Name}} lived in Stardew Valley before meeting the farmer and moved from {{Pronoun}} original house to the farm when they got married.",
+  "coreRoommates": "The farmer and {{Name}} are roommates and close, non-romantic friends. {{Name}} lived in the sewers before meeting the farmer and moved from there to the farm when they became roommates.",
+  "coreMarried": "The farmer is married to {{Name}}. {{Name}} lived in Stardew Valley before meeting the farmer and moved from {{Pronoun}} original house to the farm when they got married.",
   "coreMarriedSince": "{{Name}} and the farmer were married {{RelativeDate}}.",
   "coreGenderReferences": "${The farmer is male and the dialogue may reflect this, for example by referring to him as a 'man', 'boy' or 'husband' as appropriate in the Context, referring to typical male clothing choices or activities.^The farmer is female and the dialogue may reflect this, for example by referring to her as a 'woman', 'girl' or 'wife' as appropriate in the Context, referring to typical female clothing choices or activities.}$",
   "preoccupation": "Before the farmer arrived, {{Name}} was thinking about {{preoccupation}}. {{Name}} may talk about this, if there is nothing more pressing to discuss.",
@@ -46,6 +46,7 @@
   "spousesMarriedToOne": "The farmer is married to {{spouseList}}. {{spouseList}} lives with the farmer on the farm inherited from the farmer's grandfather.  {{Name}} and {{spouseList}} both lived in Stardew Valley and knew each other before the farmer met either of them.",
   "spouseEngaged": "The farmer is engaged to {{engagedTo}}. The wedding is in {{weddingDays}} days and the farmer is looking forward to their future together. {{engagedTo}} does not live on the farm.",
   "spousePoly": "{{Name}} is aware that the farmer has a polyamorous lifestyle and accepts this.",
+  "spousePolyView": "{{Name}} chose to join a polyamorous relationship with the farmer and the other spouses, and considers it normal while recognising that others may not. {{Name}} treats the relationship with each person in the marriage as a personal marriage. {{Name}} may experience jealousy or other normal relationship frictions, but is committed to the relationship.",
   "spouseRoommatesWithOthers": "As well as {{Name}} the Farmer is a roommate with {{roommateList}}. {{Name}}, the Farmer and {{roommateReference}} live together at the farm inherited from the farmer's grandfather in a platonic friendship.",
   "spouseRoommateWithMany": "The farmer is roommates with {{roommateList}}. The Farmer's roommates all live with the farmer on the farm inherited from the farmer's grandfather.",
   "spouseRoommateWithOne": "The farmer has {{roommateList}} as a roommate. {{roommateList}} lives with the farmer on the farm inherited from the farmer's grandfather.",
