Extended preganancy prompts to cover adoption

--- a/i18n/default.json
+++ b/i18n/default.json
@@ -168,7 +168,9 @@
   "childrenSingle": "The farmer and {{Name}} have one child.",
   "childrenDescriptionBoy": "A boy named {{Name}} who is {{Age}} years old.",
   "childrenDescriptionGirl": "A girl named {{Name}} who is {{Age}} years old.",
-  "childrenPregnant": "The farmer and {{Name}} are expecting a child in {{daysUntilBirth}} days.",
+  "childrenPregnant.npcMale": "The farmer and {{Name}} are adopting a child, who will arrive in {{daysUntilBirth}} days.^The farmer is pregnant. {{Name}} and the farmer are expecting a child in {{daysUntilBirth}} days.",
+  "childrenPregnant.npcFemale": "{{Name}} is pregnant. {{Name}} and the farmer are expecting a child in {{daysUntilBirth}} days.^The farmer and {{Name}} are adopting a child, who will arrive in {{daysUntilBirth}} days.",
+  "childrenAdoption": "",
   "generalBoy": "boy",
   "generalGirl": "girl",
   "weatherLightning": "There is a storm with rain and lightning.",
