First steps in user entered lines

--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -8,6 +8,9 @@
   "wonIceFishing": "The farmer won the ice fishing competition",
   "wonGrange": "The farmer won the Stardew Valley Fair Grange Display",
   "wonEggHunt": "The farmer won the egg hunt",
+  "typeYourResponse": "*Say something different*",
+  "yourResponse": "Your response",
+  "startConversation": "What do you want to say?",
   "systemPrompt": "You are an expert computer game writer that takes great pride in being able to create dialogue for any character in any game that exactly matches that character's situation and personality.",
   "systemPromptTranslation": "You are an expert at writing dialogue in {{Language}} based on instructions given mostly in English, while keeping the responses in character.  All responses you write must be in {{Language}}.",
   "gameContext": "You are creating dialogue to enhance the experience of players in the game Stardew Valley.\nWhile staying true to the characters you are writing for a mature audience and looking to add variety and depth when appropriate.",
