Wire up UI translations

--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -8,9 +8,11 @@
   "wonIceFishing": "The farmer won the ice fishing competition",
   "wonGrange": "The farmer won the Stardew Valley Fair Grange Display",
   "wonEggHunt": "The farmer won the egg hunt",
-  "typeYourResponse": "*Say something different*",
-  "yourResponse": "Your response",
-  "startConversation": "What do you want to say?",
+  "uiTypeYourResponse": "*Something else*",
+  "uiYourResponse": "Your response",
+  "uiStartConversation": "What do you want to say?",
+  "uiDialogueInstructions": "Press Enter to submit or click OK. Press Escape to cancel.",
+  "uiThinking": "{{Name}} is thinking",
   "systemPrompt": "You are an expert computer game writer that takes great pride in being able to create dialogue for any character in any game that exactly matches that character's situation and personality.",
   "systemPromptTranslation": "You are an expert at writing dialogue in {{Language}} based on instructions given mostly in English, while keeping the responses in character.  All responses you write must be in {{Language}}.",
   "gameContext": "You are creating dialogue to enhance the experience of players in the game Stardew Valley.\nWhile staying true to the characters you are writing for a mature audience and looking to add variety and depth when appropriate.",
@@ -184,7 +186,7 @@
   "dateTimeEarlyMorningNormal": "This is a normal time for the farmer to be up and about.",
   "dateTimeNewThisYear": "The farmer is new to Pelican Town this year.",
   "eventHistoryHeading": "Event history:",
-  "eventHistoryIntro": "{{Name}} is aware of the following recent events and conversations with the farmer.\nConversations happened at the times indicated, possibly in contexts different to the current conversation.\nThe new line may be based on previous conversations and events as well as the current context.  The line should reference any events that happened just now. It may reference patterns in the previous conversation such as similar gifts or long gaps in the conversation.\nYou should avoid {{Name}} repeating lines or concepts from previous lines. The more recent a previous event or interaction the more likely it will be referenced and the less likely it will be repeated.",
+  "eventHistoryIntro": "{{Name}} is aware of the following recent events and conversations with the farmer.\nThese are historical conversations and the context of them will have been different.\nThe line should reference any events that are described as happening \"just now\" and is likely to reference any events that happened in the last day or so. The new line you are generating should reference older events, patterns of behaviour (repeated gifts or common / rare conversations) where they are relevant to the current context or the current context lacks conversation topics.\nYou should avoid {{Name}} repeating previous lines except where that is in character.",
   "eventHistorySubheading": "History:",
   "sampleDialogueHeading": "{{Name}} Sample Dialogue:",
   "sampleDialogueIntro": "You have a sample of {{Name}}'s dialogue as follows:",
