--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -64,7 +64,7 @@
   "nonSpouseFriendshipIntimate": "{{Name}} and the farmer are very close and intimate.",
   "nonSpouseFriendshipNonSingleAdult8": "{{Name}} and the farmer are close friends. They know a lot about each other and share personal details and gossip as well as their hopes and dreams. The dialogue should reflect a close friendship, with a desire to spend time together but no romantic interest.",
   "nonSpouseFriendshipChild8Plus": "{{Name}} looks to the farmer like a parent, idolising the farmer's actions and believing that the farmer is mostly infallible.",
-  "nonSpouseFriendshipNonSingleAdult10": "{{Name}} and the farmer are close friends. They know a lot about each other and confide initimate hopes dreams and fears to each other. {{Name}} sees the farmer as a confidant and openly share their frustrations and annoyances with others who are important in their life.",
+  "nonSpouseFriendshipNonSingleAdult10": "{{Name}} and the farmer are close friends. They know a lot about each other and confide intimate hopes dreams and fears to each other. {{Name}} sees the farmer as a confidant and openly share their frustrations and annoyances with others who are important in their life.",
   "spouseActionFunLeave": "{{Name}} is leaving for the day to have fun without the farmer.",
   "spouseActionJobLeave": "{{Name}} is leaving for the day to go to work.",
   "spouseActionPatio": "{{Name}} is standing on the patio to the rear of the farmhouse.  {{Name}} is engaging in their favourite hobby, and focussing intently.",
