--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -280,7 +280,7 @@
   "configDiableForCharacters": "Disable for characters",
   "configDiableForCharactersTooltip": "Comma-separated list of villagers to disable the mod for, e.g. (\"Abigail,Leah,Sam\")",
   "configNoModels": "Unable to get model names for {{Provider}} (maybe the API key wasn't set when this menu was opened?)",
-  "configModels": "The models available on provider {{Provider}} are:\n{{models}}",
+  "configModels": "The models available on provider {{Provider}} are:\n{{Models}}",
   "modelCheckApiKey": "API key is not provided. Please check the configuration.",
   "modelCheckModelName": "Model name is not provided. Usually this is requires, please check the configuration.",
   "modelCheckValidModelName": "Can retreive model names and model name is a valid option.  Possible causes - model is not a text generation model, insecure endpoint specified or incorrect API key (some providers).",
