Fix logging of prompts.  Stabilise time and dialogue sample outputs.   Reorder prompts.

--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -207,8 +207,8 @@
   "commandIntro": "Write a single line of dialogue for {{Name}} to fit the situation and {{Name}}'s personality.",
   "commandReplaceSchedule": "The line will be used to replace a piece of situational dialogue and should communicate similar themes while being different.  The original line was:{{ScheduleLine}}",
   "instructionsHeading": "Output Format:",
-  "instructionsIntro": "The line should be written in the style of the game and reflect the level of familiarity {{Name}} has with the farmer.",
-  "instructionsSampleDialogue": "Use the supplied sample dialogue to help you match the tone and style of {{Name}}'s interactions with the farmer at the current friendship level.",
+  "instructionsIntro": "You are writing dialogue for one of the Stardew villagers to speak to the farmer.  The line should be written in the style of the game and reflect the level of familiarity the villager has with the farmer.",
+  "instructionsSampleDialogue": "Use the supplied sample dialogue to help you match the tone and style of the villager's interactions with the farmer at the current friendship level.",
   "instructionsFarmersName": "To include the farmer's name use the @ symbol.",
   "instructionsBreaks": "If the line should be presented with breaks, use #$b# as a screen divider or use #$e# as a divider for a more significant break. There should not be more than 24 words between each break. Do not put break signifiers on the start or end of the line. Do not signify breaks by starting new lines.",
   "instructionsExtraPortraitLine": "${{Key}} for {{Value}}, ",
