First cut of trinket support

--- a/ContentPack/i18n/default.json
+++ b/ContentPack/i18n/default.json
@@ -293,5 +293,7 @@
   "seasonCrops": "Important crops are",
   "seasonForage": "Forage items are",
   "biographyRelationships": "Relationships",
-  "biographyPersonality": "Personality"
+  "biographyPersonality": "Personality",
+  "trinketsFairyBox": "The farmer is being followed around by a tiny fairy, who is hovering in the air and watching everything.",
+  "trinketsCompanionFrog": "The farmer is being followed around by a frog, who is hopping along behind the farmer and watching everything."
 }
